@@ -19,7 +19,6 @@ package org.springframework.boot.actuate.autoconfigure.web.server;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.api.Test;
@@ -83,7 +82,7 @@ class ManagementContextConfigurationImportSelectorTests {
 		private final List<String> factoryNames;
 
 		private TestManagementContextConfigurationsImportSelector(Class<?>... classes) {
-			this.factoryNames = Stream.of(classes).map(Class::getName).collect(Collectors.toList());
+			this.factoryNames = Stream.of(classes).map(Class::getName).toList();
 		}
 
 		@Override
