@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -47,7 +47,7 @@ public class AutoConfigurations extends Configurations implements Ordered {
 
 	@Override
 	protected Collection<Class<?>> sort(Collection<Class<?>> classes) {
-		List<String> names = classes.stream().map(Class::getName).collect(Collectors.toList());
+		List<String> names = classes.stream().map(Class::getName).toList();
 		List<String> sorted = SORTER.getInPriorityOrder(names);
 		return sorted.stream().map((className) -> ClassUtils.resolveClassName(className, null))
 				.collect(Collectors.toCollection(ArrayList::new));
