@@ -16,8 +16,6 @@
 
 package org.springframework.boot.autoconfigure.amqp;
 
-import java.util.stream.Collectors;
-
 import com.rabbitmq.client.Channel;
 import com.rabbitmq.client.impl.CredentialsProvider;
 import com.rabbitmq.client.impl.CredentialsRefreshService;
@@ -149,8 +147,7 @@ public class RabbitAutoConfiguration {
 				ObjectProvider<RabbitRetryTemplateCustomizer> retryTemplateCustomizers) {
 			RabbitTemplateConfigurer configurer = new RabbitTemplateConfigurer(properties);
 			configurer.setMessageConverter(messageConverter.getIfUnique());
-			configurer
-					.setRetryTemplateCustomizers(retryTemplateCustomizers.orderedStream().collect(Collectors.toList()));
+			configurer.setRetryTemplateCustomizers(retryTemplateCustomizers.orderedStream().toList());
 			return configurer;
 		}
 
