@@ -17,7 +17,6 @@
 package org.springframework.boot.test.autoconfigure.web.reactive;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.boot.autoconfigure.AutoConfiguration;
@@ -71,8 +70,7 @@ public class WebTestClientAutoConfiguration {
 	@ConfigurationProperties(prefix = "spring.test.webtestclient")
 	public SpringBootWebTestClientBuilderCustomizer springBootWebTestClientBuilderCustomizer(
 			ObjectProvider<CodecCustomizer> codecCustomizers) {
-		return new SpringBootWebTestClientBuilderCustomizer(
-				codecCustomizers.orderedStream().collect(Collectors.toList()));
+		return new SpringBootWebTestClientBuilderCustomizer(codecCustomizers.orderedStream().toList());
 	}
 
 }
