@@ -20,7 +20,6 @@ import java.io.IOException;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.gradle.api.Action;
 import org.gradle.api.DefaultTask;
@@ -580,7 +579,7 @@ public class BootBuildImage extends DefaultTask {
 	private BuildRequest customizeBuildpacks(BuildRequest request) {
 		List<String> buildpacks = this.buildpacks.getOrNull();
 		if (buildpacks != null && !buildpacks.isEmpty()) {
-			return request.withBuildpacks(buildpacks.stream().map(BuildpackReference::of).collect(Collectors.toList()));
+			return request.withBuildpacks(buildpacks.stream().map(BuildpackReference::of).toList());
 		}
 		return request;
 	}
@@ -588,7 +587,7 @@ public class BootBuildImage extends DefaultTask {
 	private BuildRequest customizeBindings(BuildRequest request) {
 		List<String> bindings = this.bindings.getOrNull();
 		if (bindings != null && !bindings.isEmpty()) {
-			return request.withBindings(bindings.stream().map(Binding::of).collect(Collectors.toList()));
+			return request.withBindings(bindings.stream().map(Binding::of).toList());
 		}
 		return request;
 	}
@@ -596,7 +595,7 @@ public class BootBuildImage extends DefaultTask {
 	private BuildRequest customizeTags(BuildRequest request) {
 		List<String> tags = this.tags.getOrNull();
 		if (tags != null && !tags.isEmpty()) {
-			return request.withTags(tags.stream().map(ImageReference::of).collect(Collectors.toList()));
+			return request.withTags(tags.stream().map(ImageReference::of).toList());
 		}
 		return request;
 	}
