@@ -84,10 +84,8 @@ public class ServletContextInitializerBeans extends AbstractCollection<ServletCo
 				: Collections.singletonList(ServletContextInitializer.class);
 		addServletContextInitializerBeans(beanFactory);
 		addAdaptableBeans(beanFactory);
-		List<ServletContextInitializer> sortedInitializers = this.initializers.values().stream()
-				.flatMap((value) -> value.stream().sorted(AnnotationAwareOrderComparator.INSTANCE))
-				.collect(Collectors.toList());
-		this.sortedList = Collections.unmodifiableList(sortedInitializers);
+		this.sortedList = this.initializers.values().stream()
+				.flatMap((value) -> value.stream().sorted(AnnotationAwareOrderComparator.INSTANCE)).toList();
 		logMappings(this.initializers);
 	}
 
